--- a/index.html
+++ b/index.html
@@ -54,9 +54,14 @@
   </head>
   <body data-bs-spy="scroll" data-bs-target="#navScroll">
     <header>
-      <div class="container"><a class="navbar-brand pe-4 fs-4" href="/"><svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-layers-half" viewbox="0 0 16 16">
+      <div class="container">
+        <a class="navbar-brand pe-4 fs-4" href="/">
+          <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor" class="bi bi-layers-half" viewbox="0 0 16 16">
             <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z" />
-          </svg><span class="ms-1 fw-bolder">Aura Haya</span></a></div>
+          </svg><span class="ms-1 fw-bolder">Aura Haya</span>
+        </a>
+        <a href="mailto:hello@aurahaya.com" style="float: right;margin-top: 5px;">hello@aurahaya.com</a>
+      </div>
     </header>
     <main>
       <div class="w-100 overflow-hidden bg-gray-100" id="top">
