--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <div class="col-12 col-lg-8 mt-0 h-100 position-absolute top-0 end-0 bg-cover" data-aos="fade-left" style="background-image: url(img/webp/interior11.webp);"></div>
           <div class="row">
             <div class="col-lg-7 py-vh-6 position-relative" data-aos="fade-right">
-              <h1 class="display-1 fw-bold mt-5"><span class="srt">Aura Haya</span><span>Clean, hygienic, living</span></h1>
+              <h1 class="display-1 fw-bold mt-5"><span class="srt">Aura Haya</span><span>Clean. Hygienic. Living.</span></h1>
               <p class="lead">Coming soon..</p>
             </div>
           </div>
@@ -90,7 +90,14 @@
           <div class="col-12 col-lg-6 col-xl-3 border-end p-5"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="currentColor" class="bi bi-layers-half" viewbox="0 0 16 16">
               <path d="M8.235 1.559a.5.5 0 0 0-.47 0l-7.5 4a.5.5 0 0 0 0 .882L3.188 8 .264 9.559a.5.5 0 0 0 0 .882l7.5 4a.5.5 0 0 0 .47 0l7.5-4a.5.5 0 0 0 0-.882L12.813 8l2.922-1.559a.5.5 0 0 0 0-.882l-7.5-4zM8 9.433 1.562 6 8 2.567 14.438 6 8 9.433z" />
             </svg>
-            <address class="text-secondary mt-3"><strong>Aura Haya</strong><br> 3 Cumbrian House<br> 217 Marsh Wall<br> London<br> E14 9FJ<br></address>
+            <strong>Aura Haya</strong><br>
+            <span>Clean. Hygienic. Living.</span><br>
+            <address class="text-secondary mt-3">
+              3 Cumbrian House<br> 
+              217 Marsh Wall<br> 
+              London<br> 
+              E14 9FJ<br>
+            </address>
           </div>
         </div>
       </div>
